istio/relatorios-deployment.yaml
##################################################################################################
# Solicitacoes service
##################################################################################################
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: relatorios
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: relatorios
    spec:
      containers:
      - name: relatorios
        image: micx0/apirelatorios
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: relatorios
  labels:
    app: relatorios
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: relatorios
