istio/solicitacao-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: solicitacoes
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: solicitacoes
    spec:
      containers:
      - name: solicitacoes
        image: micx0/apisolicitacaorelatorios
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: solicitacoes
  labels:
    app: solicitacoes
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: solicitacoes
