istio/relatorios-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: relatorios-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: relatorios
spec:
  hosts:
  - "*"
  gateways:
  - relatorios-gateway
  http:
  - match:
    - uri:
        prefix: /api/relatorios
    route:
    - destination:
        host: relatorios
        port:
          number: 80
